[tool.poetry]
name = "umowy-na-wywoz-nieczystosci"
version = "0.1.0"
description = ""
authors = ["zdziebkowski <wojciech.zdziebkowski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
docxtpl = "^0.19.1"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
tkcalendar = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
